[package]
name = "ciso"
description = "Compressed ISO converter for PSP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
bincode = "1.3.3"
byteorder = "1.4.3"
serde = { version = "1.0.143", features=["derive"] }
flate2 = "1.0.24"
