[package]
name = "ciso"
description = "Compressed ISO converter for PSP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
bincode = "1.3.3"
byteorder = "1.4.3"
serde = { version = "1.0.143", features=["derive"] }
miniz_oxide = "0.5.3"
